# ChangeLog for x11-wm/xpra
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/x11-wm/xpra/ChangeLog,v 1.2 2011/11/04 15:31:02 xmw Exp $

  04 Nov 2011; Michael Weber <xmw@gentoo.org> xpra-0.0.7.30.ebuild:
  Add server patch

*xpra-0.0.7.30 (04 Nov 2011)

  04 Nov 2011; Michael Weber <xmw@gentoo.org> +xpra-0.0.7.30.ebuild,
  +metadata.xml:
  Initial import (thanks to Antoine Martin, soxx, bug 352974, bug 353661)
