@@ -1,6 +1,11 @@
 # ChangeLog for x11-wm/xpra
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-wm/xpra/ChangeLog,v 1.2 2011/11/04 15:31:02 xmw Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-wm/xpra/ChangeLog,v 1.3 2011/12/17 21:01:23 xmw Exp $
+
+*xpra-0.0.7.32 (17 Dec 2011)
+
+  17 Dec 2011; Michael Weber <xmw@gentoo.org> +xpra-0.0.7.32.ebuild:
+  Version bump, thanks Antoine Martin for the hint.
 
   04 Nov 2011; Michael Weber <xmw@gentoo.org> xpra-0.0.7.30.ebuild:
   Add server patch
